Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -948,7 +948,7 @@
   "pli-tv-kd11:25.2.23": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:25.2.24": "The Sangha has done the legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.25": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:25.2.26": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:25.2.26": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:25.2.27": "Monks, you should proclaim from monastery to monastery ",
   "pli-tv-kd11:25.2.28": "that the Sangha has done a legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.29": "prohibiting him from living with the Sangha. ",
