--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -982,13 +982,13 @@
   "pli-tv-kd11:26.1.29": "When a procedure of ejection for not recognizing an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:26.1.30": "“When a procedure of ejection for not recognizing an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after accusing the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:26.1.31": "When a procedure of ejection for not recognizing an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after reminding the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:26.1.32": "When a procedure of ejection for not recognizing an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having charged the person with their offense, it is done legitimately, it is done by a unanimous assembly.” ",
+  "pli-tv-kd11:26.1.32": "When a procedure of ejection for not recognizing an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after charging the person with their offense, it’s done legitimately, it’s done by a unanimous assembly.” ",
   "pli-tv-kd11:26.1.34": "The group of twelve on legitimate legal procedures of ejection for not recognizing an offense is finished. ",
   "pli-tv-kd11:26.1.35.0": "5.3 The group of six on wishing ",
   "pli-tv-kd11:26.1.35.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of ejecting him for not recognizing an offense: ",
-  "pli-tv-kd11:26.1.36": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
-  "pli-tv-kd11:26.1.37": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
-  "pli-tv-kd11:26.1.38": "he is constantly and improperly socializing with householders. ",
+  "pli-tv-kd11:26.1.36": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
+  "pli-tv-kd11:26.1.37": "he’s ignorant and incompetent, often committing offenses, lacking in boundaries; ",
+  "pli-tv-kd11:26.1.38": "he’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:26.1.40": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not recognizing an offense: ",
   "pli-tv-kd11:26.1.41": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
   "pli-tv-kd11:26.1.43": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not recognizing an offense: ",
