--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -998,7 +998,7 @@
   "pli-tv-kd11:26.1.48": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:26.1.49": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:26.1.51": "The Sangha may, if it wishes, do a procedure of ejection for not recognizing an offense against another three kinds of monks: ",
-  "pli-tv-kd11:26.1.52": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
+  "pli-tv-kd11:26.1.52": "those who’ve failed in the higher morality; those who’ve failed in conduct; those who’ve failed in view. ",
   "pli-tv-kd11:26.1.54": "The Sangha may, if it wishes, do a procedure of ejection for not recognizing an offense against another three kinds of monks: ",
   "pli-tv-kd11:26.1.55": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha.” ",
   "pli-tv-kd11:26.1.57": "The group of six on wishing in regard to a procedure of ejection for not recognizing an offense is finished. ",
