--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1127,7 +1127,7 @@
   "pli-tv-kd11:30.1.21": "Any monk who approves of lifting the legal procedure of ejecting the monk Channa for not recognizing an offense should remain silent. ",
   "pli-tv-kd11:30.1.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:30.1.23": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not recognizing an offense. ",
-  "pli-tv-kd11:30.1.24": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd11:30.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:30.1.25": "The fifth section on the legal procedure of ejection for not recognizing an offense is finished. ",
   "pli-tv-kd11:31.1.0": "6. The legal procedure of ejection for not making amends for an offense ",
   "pli-tv-kd11:31.1.1": "At one time the Buddha was staying at Kosambī in Ghosita’s Monastery. ",
