Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1147,7 +1147,7 @@
   "pli-tv-kd11:31.1.15": "“Well then, the Sangha should do a legal procedure of ejecting the monk Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.16": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:31.1.17": "And this is how it should be done. ",
-  "pli-tv-kd11:31.1.18": "First you should accuse the monk Channa. He should then be reminded of what he has done, before he is charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:31.1.18": "First you should accuse the monk Channa. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:31.1.19": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:31.1.20": "The monk Channa has committed an offense, but refuses to make amends for it. ",
   "pli-tv-kd11:31.1.21": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of ejecting Channa for not making amends for an offense, ",
