Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1171,7 +1171,7 @@
   "pli-tv-kd11:31.1.39": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.40": "The Sangha has done the legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.41": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:31.1.42": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:31.1.42": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:31.1.43": "Monks, you should proclaim from monastery to monastery ",
   "pli-tv-kd11:31.1.44": "that the Sangha has done a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.45": "prohibiting him from living with the Sangha. ",
