Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1176,7 +1176,7 @@
   "pli-tv-kd11:31.1.44": "that the Sangha has done a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.45": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:31.1.46.0": "6.1 The group of twelve on illegitimate legal procedures ",
-  "pli-tv-kd11:31.1.46.1": "“When a legal procedure of ejection for not making amends for an offense has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:31.1.46.1": "“When a legal procedure of ejection for not making amends for an offense has three qualities, it is illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:31.1.47": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
   "pli-tv-kd11:31.1.49": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:31.1.50": "it is done against one who hasn’t committed any offense, it is done against one who has committed an offense that isn’t clearable by confession, it is done against one who has confessed their offense. ",
