--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1204,13 +1204,13 @@
   "pli-tv-kd11:31.1.73": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done against one who’s committed an offense that’s clearable by confession, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:31.1.74": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:31.1.75": "“When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after accusing the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:31.1.76": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having reminded the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:31.1.77": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having charged the person with their offense, it is done legitimately, it is done by a unanimous assembly.” ",
+  "pli-tv-kd11:31.1.76": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after reminding the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:31.1.77": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after charging the person with their offense, it’s done legitimately, it’s done by a unanimous assembly.” ",
   "pli-tv-kd11:31.1.79": "The group of twelve on legitimate legal procedures of ejection for not making amends for an offense is finished. ",
   "pli-tv-kd11:31.1.80.0": "6.3 The group of six on wishing ",
   "pli-tv-kd11:31.1.80.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of ejecting him for not making amends for an offense: ",
-  "pli-tv-kd11:31.1.81": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
-  "pli-tv-kd11:31.1.82": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
+  "pli-tv-kd11:31.1.81": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
+  "pli-tv-kd11:31.1.82": "he’s ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:31.1.83": "he is constantly and improperly socializing with householders. ",
   "pli-tv-kd11:31.1.85": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not making amends for an offense: ",
   "pli-tv-kd11:31.1.86": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
