Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1211,7 +1211,7 @@
   "pli-tv-kd11:31.1.80.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of ejecting him for not making amends for an offense: ",
   "pli-tv-kd11:31.1.81": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
   "pli-tv-kd11:31.1.82": "he’s ignorant and incompetent, often committing offenses, lacking in boundaries; ",
-  "pli-tv-kd11:31.1.83": "he is constantly and improperly socializing with householders. ",
+  "pli-tv-kd11:31.1.83": "he’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:31.1.85": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not making amends for an offense: ",
   "pli-tv-kd11:31.1.86": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
   "pli-tv-kd11:31.1.88": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not making amends for an offense: ",
