--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1221,7 +1221,7 @@
   "pli-tv-kd11:31.1.93": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:31.1.94": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:31.1.96": "The Sangha may, if it wishes, do a procedure of ejection for not making amends for an offense against another three kinds of monks: ",
-  "pli-tv-kd11:31.1.97": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
+  "pli-tv-kd11:31.1.97": "those who’ve failed in the higher morality; those who’ve failed in conduct; those who’ve failed in view. ",
   "pli-tv-kd11:31.1.99": "The Sangha may, if it wishes, do a procedure of ejection for not making amends for an offense against another three kinds of monks: ",
   "pli-tv-kd11:31.1.100": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha.” ",
   "pli-tv-kd11:31.1.102": "The group of six on wishing in regard to the legal procedure of ejection for not making amends for an offense is finished. ",
