--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1337,7 +1337,7 @@
   "pli-tv-kd11:31.1.215": "Any monk who approves of lifting the legal procedure of ejecting the monk Channa for not making amends for an offense should remain silent. ",
   "pli-tv-kd11:31.1.216": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.217": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not making amends for an offense. ",
-  "pli-tv-kd11:31.1.218": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd11:31.1.218": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:31.1.219": "The sixth section on the legal procedure of ejection for not making amends for an offense is finished. ",
   "pli-tv-kd11:32.1.0": "7. The legal procedure of ejection for not giving up a bad view ",
   "pli-tv-kd11:32.1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
