--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1393,7 +1393,7 @@
   "pli-tv-kd11:32.3.25": "“Well then, the Sangha should do a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.3.26": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:32.4.1": "And this is how it should be done. ",
-  "pli-tv-kd11:32.4.2": "First you should accuse the monk Ariṭṭha. He should then be reminded of what he has done, before he is charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:32.4.2": "First you should accuse the monk Ariṭṭha. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:32.4.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:32.4.4": "The monk Ariṭṭha, the ex-vulture-killer, has the following bad and erroneous view: ",
   "pli-tv-kd11:32.4.5": "“As I understand the Teaching of the Buddha, the things he calls obstructive are not able to obstruct one who indulges in them.” ",
