Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1397,7 +1397,7 @@
   "pli-tv-kd11:32.4.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:32.4.4": "The monk Ariṭṭha, the ex-vulture-killer, has the following bad and erroneous view: ",
   "pli-tv-kd11:32.4.5": "“As I understand the Teaching of the Buddha, the things he calls obstructive are not able to obstruct one who indulges in them.” ",
-  "pli-tv-kd11:32.4.6": "He is not giving up that view. ",
+  "pli-tv-kd11:32.4.6": "He’s not giving up that view. ",
   "pli-tv-kd11:32.4.7": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.8": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:32.4.9": "This is the motion. ",
