Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1404,7 +1404,7 @@
   "pli-tv-kd11:32.4.10": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:32.4.11": "The monk Ariṭṭha, the ex-vulture-killer, has the following bad and erroneous view: ",
   "pli-tv-kd11:32.4.12": "“As I understand the Teaching of the Buddha, the things he calls obstructive are not able to obstruct one who indulges in them.” ",
-  "pli-tv-kd11:32.4.13": "He is not giving up that view. ",
+  "pli-tv-kd11:32.4.13": "He’s not giving up that view. ",
   "pli-tv-kd11:32.4.14": "The Sangha is doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.15": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:32.4.16": "Any monk who approves of doing a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
