Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1423,7 +1423,7 @@
   "pli-tv-kd11:32.4.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:32.4.30": "The Sangha has done the legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.31": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:32.4.32": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:32.4.32": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:32.4.33": "Monks, you should proclaim from monastery to monastery ",
   "pli-tv-kd11:32.4.34": "that the Sangha has done a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.35": "prohibiting him from living with the Sangha. ",
