Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1428,7 +1428,7 @@
   "pli-tv-kd11:32.4.34": "that the Sangha has done a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:32.4.35": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:33.1.0": "7.1 The group of twelve on illegitimate legal procedures ",
-  "pli-tv-kd11:33.1.1": "“When a legal procedure of ejection for not giving up a bad view has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:33.1.1": "“When a legal procedure of ejection for not giving up a bad view has three qualities, it is illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:33.1.2": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
   "pli-tv-kd11:33.1.4": "When a procedure of ejection for not giving up a bad view has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:33.1.5": "it is done against one who hasn’t committed any offense, it is done against one who has committed an offense that isn’t clearable by confession, it is done against one who has confessed their offense. ",
