Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1461,9 +1461,9 @@
   "pli-tv-kd11:33.1.34": "The group of twelve on legitimate legal procedures of ejection for not giving up a bad view is finished. ",
   "pli-tv-kd11:33.1.35.0": "7.3 The group of six on wishing ",
   "pli-tv-kd11:33.1.35.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of ejecting him for not giving up a bad view: ",
-  "pli-tv-kd11:33.1.36": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
-  "pli-tv-kd11:33.1.37": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
-  "pli-tv-kd11:33.1.38": "he is constantly and improperly socializing with householders. ",
+  "pli-tv-kd11:33.1.36": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
+  "pli-tv-kd11:33.1.37": "he’s ignorant and incompetent, often committing offenses, lacking in boundaries; ",
+  "pli-tv-kd11:33.1.38": "he’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:33.1.40": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not giving up a bad view: ",
   "pli-tv-kd11:33.1.41": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
   "pli-tv-kd11:33.1.43": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of ejecting him for not giving up a bad view: ",
