--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1561,7 +1561,7 @@
   "pli-tv-kd11:34.2.22": "he doesn’t cancel the observance-day ceremony of a regular monk; he doesn’t cancel the invitation ceremony of a regular monk; he doesn’t speak to a regular monk to initiate a legal process against him; he doesn’t make accusations against a regular monk; he doesn’t get permission from a regular monk to correct him; he doesn’t accuse a regular monk of an offense; he doesn’t remind a regular monk of an offense; he doesn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:34.2.24": "The group of forty-three on to be lifted in regard to the legal procedure of ejection for not giving up a bad view is finished. ",
   "pli-tv-kd11:35.1.1": "“And, monks, this is how it should be lifted. ",
-  "pli-tv-kd11:35.1.2": "The monk who has been ejected by the Sangha for not giving up a bad view should approach the Sangha, put his upper robes over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
+  "pli-tv-kd11:35.1.2": "The monk who’s been ejected by the Sangha for not giving up a bad view should approach the Sangha, put his upper robes over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd11:35.1.3": "‘Venerables, the Sangha has done a legal procedure of ejecting me for not giving up a bad view, but I have conducted myself properly and suitably so as to deserve to be released. I ask for the legal procedure of ejection to be lifted.’ ",
   "pli-tv-kd11:35.1.4": "And he should ask a second ",
   "pli-tv-kd11:35.1.5": "and a third time. ",
