--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1583,7 +1583,7 @@
   "pli-tv-kd11:35.1.21": "Any monk who approves of lifting the legal procedure of ejecting monk so-and-so for not giving up a bad view should remain silent. ",
   "pli-tv-kd11:35.1.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:35.1.23": "The Sangha has lifted the legal procedure of ejecting monk so-and-so for not giving up a bad view. ",
-  "pli-tv-kd11:35.1.24": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd11:35.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:35.1.25": "The seventh section on the legal procedure of ejection for not giving up a bad view is finished. ",
   "pli-tv-kd11:35.1.26": "The first chapter on legal procedures is finished. In this chapter there are seven topics. ",
   "pli-tv-kd11:35.1.162": "The chapter on legal procedures is finished."
