Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -554,7 +554,7 @@
   "pli-tv-kd14:12.2.13": "When a procedure of further penalty has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: it is done without having charged the person with their offense, it is done illegitimately, it is done by an incomplete assembly. ",
   "pli-tv-kd14:12.2.14": "",
   "pli-tv-kd14:12.3.0": "6.2 The group of twelve on legitimate legal procedures ",
-  "pli-tv-kd14:12.3.1": "“When a legal procedure of further penalty has three qualities, it is legitimate, in accordance with the Monastic Law, and properly resolved: ",
+  "pli-tv-kd14:12.3.1": "“When a legal procedure of further penalty has three qualities, it is legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd14:12.3.2.1": "it is done in the presence of the accused, it is done with the questioning of the accused, it is done with the admission of the accused. ",
   "pli-tv-kd14:12.3.2.2": "When a procedure of further penalty has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done against one who has committed an offense, it is done against one who has committed an offense that is clearable by confession, it is done against one who hasn’t confessed their offense. ",
   "pli-tv-kd14:12.3.2.3": "When a procedure of further penalty has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having accused the person of their offense, it is done after having reminded the person of their offense, it is done after having charged the person with their offense. ",
