Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1022,7 +1022,7 @@
   "pli-tv-kd14:14.25.2": "But those monks ",
   "pli-tv-kd14:14.25.3": "were dissatisfied with how the Sangha at Sāvatthī had resolved that legal issue. ",
   "pli-tv-kd14:14.25.4": "They heard that in a certain monastery there was a number of senior monks who were learned and masters of the tradition; who were experts on the Teaching, the Monastic Law, and the Key Terms; who were knowledgeable and competent, had a sense of conscience, and were afraid of wrongdoing and fond of the training. ",
-  "pli-tv-kd14:14.25.5": "They thought, “If these senior monks resolve this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly resolved.” ",
+  "pli-tv-kd14:14.25.5": "They thought, “If these senior monks resolve this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.6": "They then went to that monastery and said to those senior monks, ",
   "pli-tv-kd14:14.25.7": "“This legal issue has arisen in this way. ",
   "pli-tv-kd14:14.25.8": "It would be good, Venerables, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly resolved.” ",
