--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1025,7 +1025,7 @@
   "pli-tv-kd14:14.25.5": "They thought, “If these senior monks resolve this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.6": "They then went to that monastery and said to those senior monks, ",
   "pli-tv-kd14:14.25.7": "“This legal issue has arisen in this way. ",
-  "pli-tv-kd14:14.25.8": "It would be good, Venerables, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly resolved.” ",
+  "pli-tv-kd14:14.25.8": "It would be good, Venerables, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.9": "Those senior monks thought, ",
   "pli-tv-kd14:14.25.10": "“This legal issue was properly resolved by the Sangha at Sāvatthī,” ",
   "pli-tv-kd14:14.25.11": "and they resolved it in the same way. ",
