--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1034,7 +1034,7 @@
   "pli-tv-kd14:14.25.14": "But they heard that in a certain monastery there were three senior monks … ",
   "pli-tv-kd14:14.25.15": "two senior monks … ",
   "pli-tv-kd14:14.25.16": "one senior monk who was learned and a master of the tradition; who was an expert on the Teaching, the Monastic Law, and the Key Terms; who was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
-  "pli-tv-kd14:14.25.17": "They thought, “If this senior monk resolves this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly resolved.” ",
+  "pli-tv-kd14:14.25.17": "They thought, “If this senior monk resolves this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.18": "They then went to that monastery and said to that senior monk, ",
   "pli-tv-kd14:14.25.19": "“This legal issue has arisen in this way. ",
   "pli-tv-kd14:14.25.20": "It would be good, Venerable, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly resolved.” ",
