--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1037,7 +1037,7 @@
   "pli-tv-kd14:14.25.17": "They thought, “If this senior monk resolves this legal issue—according to the Teaching, the Monastic Law, and the Teacher’s instruction—then it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.18": "They then went to that monastery and said to that senior monk, ",
   "pli-tv-kd14:14.25.19": "“This legal issue has arisen in this way. ",
-  "pli-tv-kd14:14.25.20": "It would be good, Venerable, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly resolved.” ",
+  "pli-tv-kd14:14.25.20": "It would be good, Venerable, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.21": "That senior monk thought, ",
   "pli-tv-kd14:14.25.22": "“This legal issue was properly resolved by the Sangha at Sāvatthī, and likewise by that number of senior monks, by those three senior monks, and by those two senior monks,” ",
   "pli-tv-kd14:14.25.23": "and he resolved it in the same way. ",
