--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1040,7 +1040,7 @@
   "pli-tv-kd14:14.25.20": "It would be good, Venerable, if you would resolve it—according to the Teaching, the Monastic Law, and the Teacher’s instruction—so that it will be properly disposed of.” ",
   "pli-tv-kd14:14.25.21": "That senior monk thought, ",
   "pli-tv-kd14:14.25.22": "“This legal issue was properly disposed of by the Sangha at Sāvatthī, and likewise by that number of senior monks, by those three senior monks, and by those two senior monks,” ",
-  "pli-tv-kd14:14.25.23": "and he resolved it in the same way. ",
+  "pli-tv-kd14:14.25.23": "and he disposed of it in the same way. ",
   "pli-tv-kd14:14.25.24": "Since those monks were dissatisfied with how all of these had resolved that legal issue, they went to the Buddha and told him what had happened. … ",
   "pli-tv-kd14:14.25.25": "The Buddha said, “Monks, this legal issue has been settled, laid to rest, and properly disposed of. ",
   "pli-tv-kd14:14.26.1": "To persuade those monks, I allow three kinds of voting: ",
