Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd22_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd22_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd22_translation-en-brahmali.json
@@ -496,7 +496,7 @@
   "pli-tv-kd22:2.8.124": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd22:2.8.125": "The Sangha has decided on the ten practices. ",
   "pli-tv-kd22:2.8.126": "These ten practices are contrary to the Teaching, contrary to the Monastic Law, and a departure from the Teacher’s instruction.” ",
-  "pli-tv-kd22:2.8.127": "“The legal issue has been settled and properly resolved. ",
+  "pli-tv-kd22:2.8.127": "“The legal issue has been settled and properly disposed of. ",
   "pli-tv-kd22:2.8.128": "Nevertheless, for the purpose of convincing the other monks, you should ask me about these ten practices also in the midst of the Sangha.” ",
   "pli-tv-kd22:2.8.129": "Revata then asked Sabbakāmī about these ten practices in the midst of the Sangha. ",
   "pli-tv-kd22:2.8.130": "And Sabbakāmī was able to reply to every question. ",
