--- a/translation/en/sujato/sutta/mn/mn13_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn13_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "mn13:2.5": "Then they went to the monastery of the wanderers who follow other paths, and exchanged greetings with the wanderers there. ",
   "mn13:2.6": "When the greetings and polite conversation were over, they sat down to one side. The wanderers said to them: ",
   "mn13:3.1": "“Reverends, the ascetic Gotama advocates the complete understanding of sensual pleasures, and so do we. ",
-  "mn13:3.2": "The ascetic Gotama advocates the complete understanding of sights, and so do we. ",
+  "mn13:3.2": "The ascetic Gotama advocates the complete understanding of form, and so do we. ",
   "mn13:3.3": "The ascetic Gotama advocates the complete understanding of feelings, and so do we. ",
   "mn13:3.4": "What, then, is the difference between the ascetic Gotama’s teaching and instruction and ours?” ",
   "mn13:3.5": "",
@@ -33,7 +33,7 @@
   "mn13:5.14": "",
   "mn13:6.1": "“Mendicants, when wanderers who follow other paths say this, you should say to them: ",
   "mn13:6.2": "‘But reverends, what’s the gratification, the drawback, and the escape when it comes to sensual pleasures? ",
-  "mn13:6.3": "What’s the gratification, the drawback, and the escape when it comes to sights? ",
+  "mn13:6.3": "What’s the gratification, the drawback, and the escape when it comes to form? ",
   "mn13:6.4": "What’s the gratification, the drawback, and the escape when it comes to feelings?’ ",
   "mn13:6.5": "Questioned like this, the wanderers who follow other paths would be stumped, and, in addition, would get frustrated. ",
   "mn13:6.6": "Why is that? ",
@@ -89,28 +89,28 @@
   "mn13:16.2": "Removing and giving up desire and greed for sensual pleasures: this is the escape from sensual pleasures. ",
   "mn13:17.1": "There are ascetics and brahmins who don’t truly understand sensual pleasures’ gratification, drawback, and escape in this way for what they are. It’s impossible for them to completely understand sensual pleasures themselves, or to instruct another so that, practicing accordingly, they will completely understand sensual pleasures. ",
   "mn13:17.2": "There are ascetics and brahmins who do truly understand sensual pleasures’ gratification, drawback, and escape in this way for what they are. It is possible for them to completely understand sensual pleasures themselves, or to instruct another so that, practicing accordingly, they will completely understand sensual pleasures. ",
-  "mn13:18.1": "And what is the gratification of sights? ",
+  "mn13:18.1": "And what is the gratification of form? ",
   "mn13:18.2": "Suppose there was a girl of the brahmins, aristocrats, or householders in her fifteenth or sixteenth year, neither too tall nor too short, neither too thin nor too fat, neither too dark nor too fair. Is she not at the height of her beauty and prettiness?” ",
   "mn13:18.3": "“Yes, sir.” ",
   "mn13:18.4": "“The pleasure and happiness that arise from this beauty and prettiness ",
-  "mn13:18.5": "is the gratification of sights. ",
-  "mn13:19.1": "And what is the drawback of sights? ",
+  "mn13:18.5": "is the gratification of form. ",
+  "mn13:19.1": "And what is the drawback of form? ",
   "mn13:19.2": "Suppose that some time later you were to see that same sister—eighty, ninety, or a hundred years old—bent double, crooked, leaning on a staff, trembling as they walk, ailing, past their prime, with teeth broken, hair grey and scanty or bald, skin wrinkled, and limbs blotchy. ",
   "mn13:19.3": "What do you think, mendicants? ",
   "mn13:19.4": "Has not that former beauty vanished and the drawback become clear?” ",
   "mn13:19.5": "“Yes, sir.” ",
-  "mn13:19.6": "“This is the drawback of sights. ",
+  "mn13:19.6": "“This is the drawback of form. ",
   "mn13:20.1": "Furthermore, suppose that you were to see that same sister sick, suffering, gravely ill, collapsed in her own urine and feces, being picked up by some and put down by others. ",
   "mn13:20.2": "What do you think, mendicants? ",
   "mn13:20.3": "Has not that former beauty vanished and the drawback become clear?” ",
   "mn13:20.4": "“Yes, sir.” ",
-  "mn13:20.5": "“This too is the drawback of sights. ",
+  "mn13:20.5": "“This too is the drawback of form. ",
   "mn13:21.1": "Furthermore, suppose that you were to see that same sister as a corpse discarded in a charnel ground. And she had been dead for one, two, or three days, bloated, livid, and festering. ",
   "mn13:21.2": "",
   "mn13:21.3": "What do you think, mendicants? ",
   "mn13:21.4": "Has not that former beauty vanished and the drawback become clear?” ",
   "mn13:21.5": "“Yes, sir.” ",
-  "mn13:21.6": "“This too is the drawback of sights. ",
+  "mn13:21.6": "“This too is the drawback of form. ",
   "mn13:22.1": "Furthermore, suppose that you were to see that same sister as a corpse discarded in a charnel ground. And she was being devoured by crows, hawks, vultures, herons, dogs, tigers, leopards, jackals, and many kinds of little creatures … ",
   "mn13:22.2": "",
   "mn13:22.3": "",
@@ -127,11 +127,11 @@
   "mn13:29.3": "What do you think, mendicants? ",
   "mn13:29.4": "Has not that former beauty vanished and the drawback become clear?” ",
   "mn13:29.5": "“Yes, sir.” ",
-  "mn13:29.6": "“This too is the drawback of sights. ",
-  "mn13:30.1": "And what is the escape from sights? ",
-  "mn13:30.2": "Removing and giving up desire and greed for sights: this is the escape from sights. ",
-  "mn13:31.1": "There are ascetics and brahmins who don’t truly understand sights’ gratification, drawback, and escape in this way for what they are. It’s impossible for them to completely understand sights themselves, or to instruct another so that, practicing accordingly, they will completely understand sights. ",
-  "mn13:31.2": "There are ascetics and brahmins who do truly understand sights’ gratification, drawback, and escape in this way for what they are. It is possible for them to completely understand sights themselves, or to instruct another so that, practicing accordingly, they will completely understand sights. ",
+  "mn13:29.6": "“This too is the drawback of form. ",
+  "mn13:30.1": "And what is the escape from form? ",
+  "mn13:30.2": "Removing and giving up desire and greed for form: this is the escape from form. ",
+  "mn13:31.1": "There are ascetics and brahmins who don’t truly understand form’ gratification, drawback, and escape in this way for what they are. It’s impossible for them to completely understand form themselves, or to instruct another so that, practicing accordingly, they will completely understand form. ",
+  "mn13:31.2": "There are ascetics and brahmins who do truly understand form’ gratification, drawback, and escape in this way for what they are. It is possible for them to completely understand form themselves, or to instruct another so that, practicing accordingly, they will completely understand form. ",
   "mn13:32.1": "And what is the gratification of feelings? ",
   "mn13:32.2": "It’s when a mendicant, quite secluded from sensual pleasures, secluded from unskillful qualities, enters and remains in the first absorption, which has the rapture and bliss born of seclusion, while placing the mind and keeping it connected. ",
   "mn13:32.3": "At that time a mendicant doesn’t intend to hurt themselves, hurt others, or hurt both; ",
