--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -322,5 +322,6 @@
   "dn2:44.7": "Atsisakęs tuščių plepalų, jis susilaiko nuo tuščio plepėjimo, kalba laiku, kalba tai, kas būtą, kalba iš esmės, kalba apie mokymą, kalba apie discipliną, jis taria vertingus žodžius, savalaikius, argumentuotus, aiškius, prasmingus. ",
   "dn2:44.8": "Tai irgi yra jo dorovė. ",
   "dn2:45.1": "Jis susilaiko nuo visų rūšių sėklų ir augmenijos žalojimo … ",
-  "dn2:45.2": "valgo kartą per dieną, nevalgo naktį, susilaiko nuo valgymo netinkamu laiku."
+  "dn2:45.2": "valgo kartą per dieną, nevalgo naktį, susilaiko nuo valgymo netinkamu laiku.",
+  "dn2:45.3": "Jis susilaiko nuo šokių, dainų, muzikos ir kitų pramogų žiūrėjimo."
 }
