Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -325,5 +325,6 @@
   "dn2:45.2": "valgo kartą per dieną, nevalgo naktį, susilaiko nuo valgymo netinkamu laiku.",
   "dn2:45.3": "Jis susilaiko nuo šokių, dainų, muzikos ir kitų pramogų žiūrėjimo.",
   "dn2:45.4": "Jis susilaiko nuo vėrinių ir papuošalų dėvėjimo, nuo kvepalų ir kosmetikos naudojimo.",
-  "dn2:45.5": "Jis susilaiko nuo aukštų ir didelių lovų (naudojimo)."
+  "dn2:45.5": "Jis susilaiko nuo aukštų ir didelių lovų (naudojimo).",
+  "dn2:45.6": "Jis susilaiko nuo aukso ir sidabro priėmimo."
 }
