Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -327,5 +327,5 @@
   "dn2:45.4": "Jis susilaiko nuo vėrinių ir papuošalų dėvėjimo, nuo kvepalų ir kosmetikos naudojimo.",
   "dn2:45.5": "Jis susilaiko nuo aukštų ir didelių lovų (naudojimo).",
   "dn2:45.6": "Jis susilaiko nuo aukso ir sidabro priėmimo.",
-  "dn2:45.7": "Jis susilaiko žalių (nevirtų) grūdų."
+  "dn2:45.7": "Jis susilaiko nuo žalių (nevirtų) grūdų."
 }
