--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -328,5 +328,5 @@
   "dn2:45.5": "Jis susilaiko nuo aukštų ir didelių lovų (naudojimo).",
   "dn2:45.6": "Jis susilaiko ir nepriima aukso ir sidabro,",
   "dn2:45.7": " žalių (nevirtų) grūdų,",
-  "dn2:45.8": "Jis susilaiko nuo žalios mėsos."
+  "dn2:45.8": " žalios mėsos,"
 }
