--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -329,5 +329,6 @@
   "dn2:45.6": "Jis susilaiko ir nepriima aukso ir sidabro,",
   "dn2:45.7": " žalių (nevirtų) grūdų,",
   "dn2:45.8": "žalios mėsos,",
-  "dn2:45.9": "moterų ir merginų,"
+  "dn2:45.9": "moterų ir merginų,",
+  "dn2:45.10": "vergių ir vergų,"
 }
