--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -331,5 +331,6 @@
   "dn2:45.8": "žalios mėsos,",
   "dn2:45.9": "moterų ir merginų,",
   "dn2:45.10": "vergių ir vergų,",
-  "dn2:45.11": "ožkų ir avių,"
+  "dn2:45.11": "ožkų ir avių,",
+  "dn2:45.13": "dramblių, karvių, arklių ir kumelių,"
 }
