--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -334,5 +334,6 @@
   "dn2:45.11": "ožkų ir avių,",
   "dn2:45.12": "gaidžių ir kiaulių,",
   "dn2:45.13": "dramblių, karvių, arklių ir kumelių,",
-  "dn2:45.14": "laukų ir žemės,"
+  "dn2:45.14": "laukų ir žemės,",
+  "dn2:45.15": "Jis susilaiko nuo įsivėlimo į pavedimų ir žinučių siuntinėjimus."
 }
