--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -336,5 +336,6 @@
   "dn2:45.13": "dramblių, karvių, arklių ir kumelių,",
   "dn2:45.14": "laukų ir žemės,",
   "dn2:45.15": "Jis susilaiko nuo įsivėlimo į pavedimų ir žinučių siuntinėjimus.",
-  "dn2:45.16": "Jis susilaiko nuo pirkimo ir pardavimo."
+  "dn2:45.16": "Jis susilaiko nuo pirkimo ir pardavimo.",
+  "dn2:45.17": "Jis susilaiko nuo apgaudinėjimo (neteisingu) svoriu, pinigais ir kiekiu."
 }
