Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -339,5 +339,6 @@
   "dn2:45.16": "Jis susilaiko nuo pirkimo ir pardavimo.",
   "dn2:45.17": "Jis susilaiko nuo apgaudinėjimo (neteisingu) svoriu, pinigais ir kiekiu.",
   "dn2:45.18": "Jis susilaiko nuo neteisėtumo, apgaulių, apgavysčių, nesąžiningumo.",
-  "dn2:45.19": "Jis susilaiko nuo naikinimo, žudymo, supančiojimo, užpuolimo, smurto."
+  "dn2:45.19": "Jis susilaiko nuo naikinimo, žudymo, supančiojimo, užpuolimo, smurto.",
+  "dn2:45.20": "Tai irgi yra jo dorovė."
 }
