Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -341,5 +341,6 @@
   "dn2:45.18": "Jis susilaiko nuo neteisėtumo, apgaulių, apgavysčių, nesąžiningumo.",
   "dn2:45.19": "Jis susilaiko nuo naikinimo, žudymo, supančiojimo, užpuolimo, smurto.",
   "dn2:45.20": "Tai irgi yra jo dorovė.",
-  "dn2:46.0": "4.3.1.2 Vidutinė dorovė "
+  "dn2:46.0": "4.3.1.2 Vidutinė dorovė ",
+  "dn2:46.1": "Tuomet, kai vieni gerbiami atsiskyrėliai ir brahmanai suvalgę maistą, duotą (jiems) iš tikėjimo, gyvena žalodami visokių rūšių sėklas ir augmeniją –"
 }
