Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.132:1.4": "Da kam Mahākaccāna aus seiner Hütte und sagte zu diesen Brahmanenschülern: ",
   "sn35.132:1.5": "„Schüler, macht nicht so einen Lärm. ",
   "sn35.132:1.6": "Ich werde zu euch über die Lehre sprechen.“ ",
-  "sn35.132:1.7": "Und die Brahmanenschüler verstummten. "
+  "sn35.132:1.7": "Und die Brahmanenschüler verstummten. ",
+  "sn35.132:1.8": "Da sagte Mahākaccāna ihnen diese Strophen auf: "
 }
