Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.132:1.8": "Da sagte Mahākaccāna ihnen diese Strophen auf: ",
   "sn35.132:2.1": "„Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle ",
   "sn35.132:2.2": "und erinnerten sich an die alten Bräuche. ",
-  "sn35.132:2.3": "Die Tore ihrer Sinne waren gut bewacht "
+  "sn35.132:2.3": "Die Tore ihrer Sinne waren gut bewacht ",
+  "sn35.132:2.4": "und sie hatten den Zorn gemeistert. "
 }
