Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.132:2.1": "„Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle ",
   "sn35.132:2.2": "und erinnerten sich an die alten Bräuche. ",
   "sn35.132:2.3": "Die Tore ihrer Sinne waren gut bewacht ",
-  "sn35.132:2.4": "und sie hatten den Zorn gemeistert. "
+  "sn35.132:2.4": "und sie hatten den Zorn gemeistert. ",
+  "sn35.132:3.1": "Diese Brahmanen, die sich an die alten Bräuche erinnerten, "
 }
