Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -345,5 +345,6 @@
   "dn2:46.1": "Tuomet, kai vieni gerbiami atsiskyrėliai ir brahmanai suvalgę maistą, duotą (jiems) iš tikėjimo, gyvena žalodami visokių rūšių sėklas ir augmeniją –",
   "dn2:46.2": "t.y. tai, kas dauginasi, penkiais būdais: šaknimis, ūsais, pumpurais, ūgliais ir sėklomis – jis susilaiko nuo visų rūšių sėklų ir augmenijos žalojimo.",
   "dn2:46.3": "Tai irgi yra jo dorovė. ",
-  "dn2:47.1": "Tuomet, kai vieni gerbiami atsiskyrėliai ir brahmanai suvalgę maistą, duotą (jiems) iš tikėjimo, gyvena mėgaudamiesi prikauptu turtu –"
+  "dn2:47.1": "Tuomet, kai vieni gerbiami atsiskyrėliai ir brahmanai suvalgę maistą, duotą (jiems) iš tikėjimo, gyvena mėgaudamiesi prikauptu turtu –",
+  "dn2:47.2": "t.y. prikauptu maistu, prikauptais gėrimais, prikauptais drabužiais, prikauptomis transporto priemonėmis, prikauptais patalais, prikauptais kvepalais, prikauptomis gerybėmis –"
 }
