Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn7/sn7.21_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn7/sn7.21_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn7/sn7.21_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn7.21:2.1": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe, ging zum Haus des Brahmanen Saṅgārava und setzte sich auf den ausgebreiteten Sitz. ",
   "sn7.21:2.2": "Da ging der Brahmane Saṅgārava zum Buddha und tauschte Willkommensgrüße mit ihm aus. ",
   "sn7.21:2.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. Der Buddha sagte zu ihm: ",
-  "sn7.21:2.4": "„Ist es wirklich wahr, Brahmane, dass du die Reinigung mit Wasser übst, an die Reinigung mit Wasser glaubst; dass du hingegeben an die Übung des Eintauchens ins Wasser zur Abend- und Morgendämmerung lebst?“ ",
+  "sn7.21:2.4": "„Ist es wirklich wahr, Brahmane, dass du die Reinigung mit Wasser übst, an die Reinigung mit Wasser glaubst; dass du hingegeben an die Übung des Eintauchens ins Wasser zur Morgen- und Abenddämmerung lebst?“ ",
   "sn7.21:2.5": "„Ja, Meister Gotama.“ ",
   "sn7.21:2.6": "„Aber Brahmane, aus welchem Grund übst du die Reinigung mit Wasser?“ ",
   "sn7.21:2.7": "„Es ist deshalb, Meister Gotama: Alles Schlechte, das ich über Tag begangen habe, wasche ich ab, indem ich zur Abenddämmerung bade; und alles Schlechte, das ich über Nacht begangen habe, wasche ich ab, indem ich zur Morgendämmerung bade. ",
